# greentic-operala

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.codex/: CODEX_MASTER_PROMPT.md  architecture_rules.md  audit-operala-generated-material.md  global_rules.md  greentic-sorla-summary.md  repo_overview.md  repo_overview_task.md
.codex/done/: 00-architecture-overview.md  01-operala-cli-minimal-surface.md  02-operala-answers-contract.md  03-operala-distributor-client-resolution.md  04-operala-qa-lib-state-machine.md  05-operala-i18n-locale.md  06-operala-extension-api.md  07-operala-prompt-authoring.md  08-reconciliation-extension-scaffold.md  09-reconciliation-readiness-analyser.md  10-reconciliation-sorla-patch-templates.md  11-reconciliation-answers-schema.md  12-reconciliation-gtpack-builder.md  20-customer-pilot-tenancy-demo.md  21-ci-customer-pilot-quality-gates.md
.github/workflows/: ci.yml  codeql.yml  customer-pilot-demo.yml  dependency-review.yml  nightly-coverage.yml  operala.yml  operax.yml  release.yml
.i18n/: translator-state.json
ci/: local_check.sh
crates/greentic-operala-designer-extension/: Cargo.toml  describe.json
crates/greentic-operala-designer-extension/src/: bindings.rs  component.rs  lib.rs  tools.rs
crates/greentic-operala-designer-extension/tests/: describe_contract.rs  tools_roundtrip.rs
crates/greentic-operala-designer-extension/wit/: world.wit
docs/architecture/: operala-operax.md
examples/tenancy/: README.md  answers.json
examples/tenancy/expected/: decisions.batch.json
examples/tenancy/mock-sorx/: README.md  server.py
extensions/bulk-ingest/: mod.rs
extensions/bulk-ingest/examples/landlord-tenant/: README.md  prompt.txt
extensions/reconciliation/: README.md
extensions/reconciliation/examples/: README.md
extensions/reconciliation/examples/tenancy/: README.md  answers.json  prompt.txt  sorla.yaml
extensions/reconciliation/examples/tenancy/banking/: daily-transactions.json
extensions/reconciliation/examples/tenancy/mock-sorx/: README.md
extensions/reconciliation/schemas/: README.md
extensions/reconciliation/templates/: README.md
i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
schemas/: operala.answers.schema.json
scripts/: validate_codex_material.sh  validate_generated_artifacts.sh
scripts/e2e/: customer-pilot-demo-smoke.sh
src/: handoff_plan.rs  lib.rs  main.rs
src/inference/: catalog.rs  diff.rs  mod.rs  session.rs  validate.rs  wire.rs
tools/: i18n.sh
