[package]
name = "greentic-operala"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/greenticai/greentic-operala"
homepage = "https://github.com/greenticai/greentic-operala"
documentation = "https://docs.rs/greentic-operala"
readme = "README.md"
description = "OperaLa authoring tools for Greentic operational business logic handoff artifacts."
keywords = ["greentic", "operala", "operations", "wizard"]
categories = ["development-tools", "command-line-utilities"]
include = ["build.rs", "src/**", "extensions/**", "i18n/**", "schemas/**", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ name }-v{ version }-{ target }"
pkg-fmt = "tgz"
bin = ["greentic-operala"]

[features]
default = ["native"]
# "native" enables the CLI binary, filesystem I/O, LLM runtime, and pack building.
# Omit it (--no-default-features) to get the wasm-safe core: inference pipeline,
# models, validation, extension registry, and contract parsing from in-memory YAML.
native = [
    "dep:clap",
    "dep:tokio",
    "dep:greentic-llm",
    "dep:greentic-pack",
    "dep:greentic-qa-lib",
]

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"], optional = true }
blake3 = "1"
# Git-pinned until greentic-llm is published to crates.io (publish pending); then swap to version = "0.1".
greentic-llm = { git = "https://github.com/greenticai/greentic-llm", tag = "v0.1.0", features = ["clap"], optional = true }
greentic-pack = { package = "greentic-pack-lib", path = "../greentic-pack/crates/greentic-pack", version = "0.5", optional = true }
greentic-qa-lib = { version = "0.5", optional = true }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
zip = "8"

[lib]
name = "greentic_operala"
path = "src/lib.rs"

[[bin]]
name = "greentic-operala"
path = "src/main.rs"
required-features = ["native"]
